--- a/grabezyTemplate/about.html
+++ b/grabezyTemplate/about.html
@@ -28,9 +28,9 @@
                     side or “Storefront” of Grabezy looks very professional and ready to sell almost as soon as it is ordered.</p>
             </div>
             <div class="col-md-5">
-                <img class="About" height='400' width="500" src="/static/images/grabezy.jpg" alt=""> hello
+                <img class="About" height='400' width="500" src="/static/images/grabezy.jpg" alt="">
             </div>
-        </div>
+        </div>fvfdgvfvgd
         <br>
         <hr class="featurette-divider">
         <br>
