--- a/grabezyTemplate/about.html
+++ b/grabezyTemplate/about.html
@@ -30,7 +30,7 @@
             <div class="col-md-5">
                 <img class="About" height='400' width="500" src="/static/images/grabezy.jpg" alt="">
             </div>
-        </div>fvfdgvfvgd
+        </div>
         <br>
         <hr class="featurette-divider">
         <br>
